--- a/README
+++ b/README
@@ -10,3 +10,5 @@ Create symlinks:
   $ ln -s ~/path_to_repo/dot_files/bashrc ~/.bashrc
   $ ln -s ~/path_to_repo/dot_files/git-completion.bash ~/.git-completion.bash
   $ ln -s ~/path_to_repo/dot_files/git-prompt.sh ~/.git-prompt.sh
+	$ ln -s ~/path_to_repo/dot_files/gitconfig ~/.gitconfig
+	$ ln -s ~/path_to_repo/dot_files/gitignore_global ~/.gitignore_global
