--- a/README
+++ b/README
@@ -1,16 +1,18 @@
 Installation
 
-  ```$ git clone https://github.com/joseph-tohdjojo/dot_files.git ~/path_to_where_repo_will_live/dot_files```
+```
+$ git clone https://github.com/joseph-tohdjojo/dot_files.git ~/path_to_where_repo_will_live/dot_files
+```
 
 
 
 Create symlinks:
 
-	```
-  $ ln -s ~/path_to_repo/dot_files/bash_profile ~/.bash_profile
-  $ ln -s ~/path_to_repo/dot_files/bashrc ~/.bashrc
-  $ ln -s ~/path_to_repo/dot_files/git-completion.bash ~/.git-completion.bash
-  $ ln -s ~/path_to_repo/dot_files/git-prompt.sh ~/.git-prompt.sh
-	$ ln -s ~/path_to_repo/dot_files/gitconfig ~/.gitconfig
-	$ ln -s ~/path_to_repo/dot_files/gitignore_global ~/.gitignore_global
-	```
+```
+$ ln -s ~/path_to_repo/dot_files/bash_profile ~/.bash_profile
+$ ln -s ~/path_to_repo/dot_files/bashrc ~/.bashrc
+$ ln -s ~/path_to_repo/dot_files/git-completion.bash ~/.git-completion.bash
+$ ln -s ~/path_to_repo/dot_files/git-prompt.sh ~/.git-prompt.sh
+$ ln -s ~/path_to_repo/dot_files/gitconfig ~/.gitconfig
+$ ln -s ~/path_to_repo/dot_files/gitignore_global ~/.gitignore_global
+```
